Added content from original site, added TOS and PP

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
         <title>Mine Grinder</title>
         <meta name="author" content="Jacob Hewitson">
@@ -13,4 +13,149 @@
         <meta http-equiv='expires' content='0'> 
         <meta http-equiv='pragma' content='no-cache'>
     </head>
+    <body>
+        <div id="root">
+            <h1 id="main-header">MINE GRINDER: A LEGACY OF HORROR</h1>
+            <nav>
+                <ul id="navbar">
+                    <li><a href="#home" id="home-button">Home</a></li>
+                    <li><a href="#about-author" id="author-button">About the Author</a></li>
+                    <li><a href="#art" id="art-button">Concept Art</a></li>
+                    <li><a href="#buy-book" id="buy-button">Buy Book on Amazon</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="animation-pause">
+            <label id="timer-label">Time to lights out:</label>
+            <br>
+            <a id="minutes">05</a>:<a id="seconds">00</a>
+            <br>
+            <input type="button" id="stop-button" value="Prevent Animation">
+        </div>
+        <section>
+            <img id="test" src="Images/MG1.jpg" alt="It...">
+        </section>
+        <div id="content">
+            <section id="home">
+                <h2 class="headers">Watch your back...</h2>
+                <p class="paragraphs">Mine Grinder is a thriller that grabs you as it chronicles the last trip of lifelong friends out for one
+last hurrah. It is a reverent nod to the legacy of the 80’s horror movie genre that will unnerve you
+as you turn the pages. Horror fans will love the bloody misfortune into a forbidden mining town’s
+secret past, Abismo de la Plata, The Silver Abyss as it was named. Surrounded by darkness,
+the friends only have themselves to rely on as a mine collapse traps them and a robotic
+executioner aims to slaughter them, one by one. Chased by the cold machine that is as
+methodical as any serial killer in any story that came before. It is a story of pain and graphic
+death that spirals into the weaved web of a historically insane genius left from the mine’s past.
+What secrets does the darkness of Abismo de la Plata hold and can they find their way out
+before they become lost to the legend of the Silver Abyss?</p>
+            </section>
+            <section id="about-author">
+                <h2 class="headers">About the Author</h2>
+                <img src='Images/DH.jpg' alt="Author - David Hewitson" id="author-image" class="pictures">
+                <div id="author-content">
+                    <br>
+                    <p class="paragraphs" id="about-author-p">
+                        Dave “Huey” Hewitson was born in the 70’s and from an early age loved watching movies. Huey’s mom started him off with musicals but as he got older, he started watching fantasy like Krull and Willow, sci-fi like Wrath of Khan and ROTJ and action, anything with Jean-Claude, Segal or Arnold. After working at a video store in the summer of 1989, Huey became fascinated with the Horror genre, Michael, Freddy and Chuckie being his big three. Every night, after Huey closed up, he would bring home a horror movie, a box of Hostess Ding Dongs and a gallon of milk. Huey and his dad, a funeral director (Phantasm being his dad’s favorite movies), would finish all three before the night was over. This is Huey’s debut entry in writing. He wanted to create a character that would become equal to the 80’s predecessors. “Respectfully, I do miss the old campy stuff. Let’s just have some fun.”
+                    </p>
+                </div>
+            </section>
+            <br>
+            <br>
+            <section id="art">
+                <h2 class="headers">Illustrations</h2>
+                <div id="image-container">
+                    <figure>
+                        <img src="Images/AdlP.jpg" alt="Abismo de la Plata" class="pictures">
+                        <figcaption>Abismo de la Plata</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Images/GhostTown.jpg" alt="Abandoned Mining Town" class="pictures">
+                        <figcaption>Abismo de la Plata Town</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Images/MG2.jpg" alt="The Grinder" class="pictures">
+                        <figcaption>The Mine Grinder</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Images/Shack.jpg" alt="Abandoned Shack" class="pictures">
+                        <figcaption>Small Shack where the town keeper lives.</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Images/Tunnel.jpg" alt="Tunnel 1" class="pictures">
+                        <figcaption>One of the many tunnels in the mine.</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="Images/Tunnel2.jpg" alt="Tunnel 2" class="pictures">
+                        <figcaption>Another tunnel of the mine.</figcaption>
+                    </figure>
+
+                </div>
+                <!-- <div class="row">
+                    <div class="column">
+                        <div class="fig-and-cap">
+                            <img src="Images/AdlP.jpg" alt="Abismo de la Plata" class="pictures">
+                            <p>Abismo de la Plata</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="fig-and-cap">
+                            <img src="Images/GhostTown.jpg" alt="Abandoned Mining Town" class="pictures">
+                            <p>Abismo de la Plata Town</p>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <br>
+                <br>
+                <div class="row">
+                    <div class="column">
+                        <div class="fig-and-cap">
+                            <img src="Images/MG2.jpg" alt="The Grinder" class="pictures">
+                            <p>The Mine Grinder</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="fig-and-cap">
+                            <img src="Images/Shack.jpg" alt="Abandoned Shack" class="pictures">
+                            <p>Small Shack where the town keeper lives.</p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br> -->
+                <!-- <div class="row">
+                    <div class="column">
+                        <div class="fig-and-cap">
+                            <img src="Images/Tunnel.jpg" alt="Tunnel 1" class="pictures">
+                            <p>One of the many tunnels in the mine.</p>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="fig-and-cap">
+                            <img src="Images/Tunnel2.jpg" alt="Tunnel 2" class="pictures">
+                            <p>Another tunnel of the mine.</p>
+                        </div>
+                    </div>
+                </div> -->
+            </section>
+            <section id="buy-book">
+                <h2 class="headers">Reviews and Purchase</h2>
+                <p class="paragraphs">The author is currently working on getting the book ready for publishing. It should be available on Amazon within the next few weeks. Other links to purchase the book will be included here as well.
+                    <br>
+                    <br>
+                Reviews will be included here once the book has been reviewed and critiqued.
+                </p>
+                <br>
+                <br>
+                <br>
+            </section>
+            <hr>
+            <div id="copyright-and-legal">
+                <br>
+                Mine Grinder is a Copyright of David Hewitson, 2022
+                <br>
+                <a href="PrivacyPolicy.html" class="policies">Privacy Policy (Updated 1/12/2023)</a> || <a href="ToS.html" class="policies">Terms of Service (Updated 1/12/2023)</a>
+             </div>
+        </div>
+        <script src="index.js" defer></script>
+    </body>
 </html>
