Added styles to elements matching old site.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     </head>
     <body>
         <div id="root">
-            <h1 id="main-header">MINE GRINDER: A LEGACY OF HORROR</h1>
-            <nav>
-                <ul id="navbar">
-                    <li><a href="#home" id="home-button">Home</a></li>
-                    <li><a href="#about-author" id="author-button">About the Author</a></li>
-                    <li><a href="#art" id="art-button">Concept Art</a></li>
-                    <li><a href="#buy-book" id="buy-button">Buy Book on Amazon</a></li>
-                </ul>
-            </nav>
+            <header>
+                <h1 id="main-header">MINE GRINDER: A LEGACY OF HORROR</h1>
+                <nav>
+                    <ul id="navbar">
+                        <li><a href="#home" id="home-button">Home</a></li>
+                        <li><a href="#about-author" id="author-button">About the Author</a></li>
+                        <li><a href="#art" id="art-button">Art</a></li>
+                        <li><a href="#buy-book" id="buy-button">Buy Book on Amazon</a></li>
+                    </ul>
+                </nav>
+            </header>
+            
         </div>
         <div id="animation-pause">
             <label id="timer-label">Time to lights out:</label>
@@ -156,6 +159,8 @@ before they become lost to the legend of the Silver Abyss?</p>
                 <a href="PrivacyPolicy.html" class="policies">Privacy Policy (Updated 1/12/2023)</a> || <a href="ToS.html" class="policies">Terms of Service (Updated 1/12/2023)</a>
              </div>
         </div>
+        <br>
+        <br>
         <script src="index.js" defer></script>
     </body>
 </html>
