Added script, fixed styling for grinder image.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@ before they become lost to the legend of the Silver Abyss?</p>
         </div>
         <br>
         <br>
-        <script src="index.js" defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
