Made jumpscare animation more smooth.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div id="root">
             <header>
-                <h1 id="main-header">MINE GRINDER: A LEGACY OF HORROR</h1>
+                <h1 id="main-header">MINE GRINDER: <br> A LEGACY OF HORROR</h1>
                 <nav>
                     <ul id="navbar">
                         <li><a href="#home" id="home-button">Home</a></li>
@@ -93,52 +93,6 @@ before they become lost to the legend of the Silver Abyss?</p>
                     </figure>
 
                 </div>
-                <!-- <div class="row">
-                    <div class="column">
-                        <div class="fig-and-cap">
-                            <img src="Images/AdlP.jpg" alt="Abismo de la Plata" class="pictures">
-                            <p>Abismo de la Plata</p>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="fig-and-cap">
-                            <img src="Images/GhostTown.jpg" alt="Abandoned Mining Town" class="pictures">
-                            <p>Abismo de la Plata Town</p>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <br>
-                <br>
-                <div class="row">
-                    <div class="column">
-                        <div class="fig-and-cap">
-                            <img src="Images/MG2.jpg" alt="The Grinder" class="pictures">
-                            <p>The Mine Grinder</p>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="fig-and-cap">
-                            <img src="Images/Shack.jpg" alt="Abandoned Shack" class="pictures">
-                            <p>Small Shack where the town keeper lives.</p>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <br> -->
-                <!-- <div class="row">
-                    <div class="column">
-                        <div class="fig-and-cap">
-                            <img src="Images/Tunnel.jpg" alt="Tunnel 1" class="pictures">
-                            <p>One of the many tunnels in the mine.</p>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="fig-and-cap">
-                            <img src="Images/Tunnel2.jpg" alt="Tunnel 2" class="pictures">
-                            <p>Another tunnel of the mine.</p>
-                        </div>
-                    </div>
-                </div> -->
             </section>
             <section id="buy-book">
                 <h2 class="headers">Reviews and Purchase</h2>
