Added mobile navbar.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
                         <li><a href="#home" id="home-button">Home</a></li>
                         <li><a href="#about-author" id="author-button">About the Author</a></li>
                         <li><a href="#art" id="art-button">Art</a></li>
-                        <li><a href="#buy-book" id="buy-button">Buy Book on Amazon</a></li>
+                        <li><a href="#buy-book" id="buy-button">Buy Book</a></li>
                     </ul>
                 </nav>
+                <div id="mobile-menu">
+                    <div id="mobile-menu-button">Menu</div>
+                    <ul id="mobile-menu-links">
+                        <li><a href="#home" id="mobile-home-button" class="mobile-anchors">Home</a></li>
+                        <li><a href="#about-author" id="mobile-author-button" class="mobile-anchors">About the Author</a></li>
+                        <li><a href="#art" id="mobile-art-button" class="mobile-anchors">Art</a></li>
+                        <li><a href="#buy-book" id="mobile-buy-button" class="mobile-anchors">Buy Book</a></li>
+                    </ul>
+                </div>
             </header>
             
         </div>
