Added purchase link and book cover image.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <div id="content">
             <section id="home">
                 <h2 class="headers">Watch your back...</h2>
-                <p class="paragraphs">Mine Grinder is a thriller that grabs you as it chronicles the last trip of lifelong friends out for one
+                <div id="intro-block">
+                    <img src="Images/BookCover.jpg" alt="Book Cover" id="book-cover">
+                <p class="paragraphs" id="intro">Mine Grinder is a thriller that grabs you as it chronicles the last trip of lifelong friends out for one
 last hurrah. It is a reverent nod to the legacy of the 80’s horror movie genre that will unnerve you
 as you turn the pages. Horror fans will love the bloody misfortune into a forbidden mining town’s
 secret past, Abismo de la Plata, The Silver Abyss as it was named. Surrounded by darkness,
@@ -60,6 +62,7 @@ methodical as any serial killer in any story that came before. It is a story of 
 death that spirals into the weaved web of a historically insane genius left from the mine’s past.
 What secrets does the darkness of Abismo de la Plata hold and can they find their way out
 before they become lost to the legend of the Silver Abyss?</p>
+                </div>
             </section>
             <section id="about-author">
                 <h2 class="headers">About the Author</h2>
@@ -104,11 +107,11 @@ before they become lost to the legend of the Silver Abyss?</p>
                 </div>
             </section>
             <section id="buy-book">
-                <h2 class="headers">Reviews and Purchase</h2>
-                <p class="paragraphs">The author is currently working on getting the book ready for publishing. It should be available on Amazon within the next few weeks. Other links to purchase the book will be included here as well.
+                <h2 class="headers">Buy Book</h2>
+                <p class="paragraphs">You can buy the book by following <a href="https://www.amazon.com/dp/B0C3XJ1TWJ/ref=sr_1_2?crid=3B6W6VX39RZF8&keywords=kindle+books+mine+grinder&qid=1682796082&s=books&sprefix=kindle+books+mine+grinde%2Cstripbooks%2C181&sr=1-2" title="Buy 'Mine Grinder: A Legacy of Horror' on Amazon and Kindle">this</a> link or by clicking the button below.
                     <br>
                     <br>
-                Reviews will be included here once the book has been reviewed and critiqued.
+                    <button onclick="location.href=`https://www.amazon.com/dp/B0C3XJ1TWJ/ref=sr_1_2?crid=3B6W6VX39RZF8&keywords=kindle+books+mine+grinder&qid=1682796082&s=books&sprefix=kindle+books+mine+grinde%2Cstripbooks%2C181&sr=1-2`;" title="Buy 'Mine Grinder: A Legacy of Horror' on Amazon and Kindle">Buy Now!</button>
                 </p>
                 <br>
                 <br>
